Changelog
=========

2.13.16 (unreleased)
--------------------


2.13.15 (2011-06-30)
--------------------

- Fixed undefined variables in BooleanIndex inline migration code.

- Fixed BooleanIndex' items method so the ZMI browse view works.

2.13.14 (2011-05-19)
--------------------

- Fixed addition of two LazyCat's if any of them was already flattened.

- Extend BooleanIndex by making the indexed value variable instead of
  hardcoding it to `True`. The indexed value will determine the smaller set
  automatically and choose its best value. An inline switch is done once the
  indexed value set grows larger than 60% of the total length. 60% was chosen
  to avoid constant switching for indexes that have an almost equal
  distribution of `True/False`.

- Substitute catalog entry in UUIDIndex error message.

2.13.13 (2011-05-04)
--------------------

- Optimize `Catalog.updateMetadata` avoiding a `self.uids` lookup and removing
  inline migration code for converting `self.data` from non-IOBTree types.

- In the path index, don't update data if the value hasn't changed.

2.13.12 (2011-05-02)
--------------------

- Optimize DateRangeIndex for better conflict resolution handling. It always
  starts out with storing an IITreeSet of the value instead of special casing
  storing an int for a single value. The `single value as int` optimization
  should be provided via a separate API to be called periodically outside the
  context of a normal request.

- Replaced `weightedIntersection` and `weightedUnion` calls with their
  non-weighted version, as we didn't pass in weights.

2.13.11 (2011-05-02)
--------------------

- Fix possible TypeError in `sortResults` method if only b_start but not b_size
  has been provided.

- Prevent the new UUIDIndex from acquiring attributes via Acquisition.

2.13.10 (2011-04-21)
--------------------

- Handle `TypeErrors` in the KeywordIndex if an indexed attribute is a method
  with required arguments.
